part06/todo_server_axum/tests/api/snapshots/api__auth__return_200_if_login_with_valid_credentials.snap
---
source: tests/api/auth.rs
expression: json
---
{
  "token": "[TOKEN]",
  "user": {
    "created_at": "[DATE]",
    "email": "valid@example.com",
    "id": 1
  }
}
