part06/todo_server_axum/tests/api/snapshots/api__auth__returns_an_error_response_for_invalid_input.snap
---
source: tests/api/auth.rs
expression: json
---
{
  "error": "올바른 이메일 형식이 아닙니다."
}
