part06/todo_server_axum/tests/api/snapshots/api__auth__successfully_register_user.snap
---
source: tests/api/auth.rs
expression: json
---
{
  "token": "[TOKEN]",
  "user": {
    "created_at": "[DATE]",
    "email": "test@example.com",
    "id": 1
  }
}
